--- a/lostreport.html
+++ b/lostreport.html
@@ -1,122 +1,231 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Lost Reports - Bravehearts Lost & Found</title>
-  <link rel="stylesheet" href="lostreport.css">
   <style>
-    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
-    .video-background { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; overflow:hidden; }
-    .video-background video { width:100%; height:100%; object-fit:cover; }
-    .overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); z-index:-1; }
-    .card { background:white; max-width:900px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
-    h2 { text-align:center; color:#13007d; }
-    .grid-container { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap:15px; margin-top:20px; }
-    .report-card { background:#f9f9f9; border:1px solid #ccc; border-radius:8px; padding:10px; cursor:pointer; transition:0.2s; }
-    .report-card:hover { box-shadow:0 0 10px rgba(0,0,0,0.2); }
-    .report-title { font-weight:bold; color:#13007d; }
-    .report-summary { margin-top:5px; font-size:14px; }
-    .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
-    .modal-content { background:white; padding:20px; border-radius:12px; max-width:600px; max-height:80%; overflow-y:auto; position:relative; }
-    .close-btn { position:absolute; top:10px; right:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
-    .modal img { max-width:100%; margin-top:10px; border:2px solid #13007d; border-radius:8px; }
-    #submitAnother { margin-top:15px; padding:12px 20px; border:none; border-radius:8px; background:#13007d; color:white; font-weight:bold; cursor:pointer; }
+    /* Body */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f2f2f2;
+    }
+
+    /* Video background */
+    .video-background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -2;
+      overflow: hidden;
+    }
+    .video-background video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .overlay {
+      position: fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: rgba(0,0,0,0.3);
+      z-index:-1;
+    }
+
+    /* Card container */
+    .card {
+      max-width: 1200px;
+      margin: 50px auto;
+      background: rgba(255,255,255,0.85);
+      padding: 25px 30px;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+      position: relative;
+      z-index: 1;
+      color: #13007d;
+    }
+
+    h2 {
+      text-align: center;
+      margin: 0;
+      margin-bottom: 20px;
+    }
+
+    /* Grid for reports */
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 16px;
+    }
+
+    /* Report card */
+    .report-card {
+      border: 2px solid rgba(19,0,125,0.6);
+      border-radius: 12px;
+      padding: 14px 18px;
+      background: rgba(255,255,255,0.6);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      transition: 0.3s;
+      cursor: pointer;
+    }
+    .report-card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+    }
+
+    .report-title {
+      font-weight: bold;
+      font-size: 1.1rem;
+      margin-bottom: 6px;
+    }
+    .report-summary {
+      font-size: 0.95rem;
+      color: #222;
+      max-height: 40px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 25px 30px;
+      border-radius: 12px;
+      max-width: 700px;
+      width: 90%;
+      max-height: 90%;
+      overflow-y: auto;
+      position: relative;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+    }
+    .modal-content h3 {
+      margin-top: 0;
+      margin-bottom: 12px;
+      font-size: 1.4rem;
+      color: #13007d;
+      border-bottom: 1px solid #13007d;
+      padding-bottom: 6px;
+    }
+    .modal-content ul {
+      list-style: none;
+      padding: 0;
+    }
+    .modal-content ul li {
+      margin-bottom: 10px;
+    }
+    .modal-content img {
+      max-width: 100%;
+      border: 2px solid #13007d;
+      border-radius: 8px;
+      margin-top: 8px;
+    }
+    .close-btn {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      padding: 8px 16px;
+      border-radius: 8px;
+      background: #13007d;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.2s;
+    }
+    .close-btn:hover {
+      background: #0d0060;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
 
-<div class="video-background">
-  <video autoplay muted loop playsinline>
-    <source src="video/FAITH.mp4" type="video/mp4">
-  </video>
-</div>
-<div class="overlay"></div>
-
-<div class="card">
-  <h2>All Submitted Lost Reports</h2>
-  <div id="summary" class="grid-container">Loading reports...</div>
-  <button id="submitAnother">Submit Another Report</button>
-</div>
-
-<div id="reportModal" class="modal">
-  <div class="modal-content">
-    <button class="close-btn" id="closeModal">Close</button>
-    <div id="modalDetails"></div>
+  <div class="video-background">
+    <video autoplay muted loop playsinline>
+      <source src="video/FAITH.mp4" type="video/mp4">
+    </video>
   </div>
-</div>
+  <div class="overlay"></div>
 
-<script>
-const summaryDiv = document.getElementById('summary');
-const modal = document.getElementById('reportModal');
-const modalDetails = document.getElementById('modalDetails');
-const closeModalBtn = document.getElementById('closeModal');
-const submitAnother = document.getElementById('submitAnother');
+  <div class="card">
+    <h2>All Submitted Lost Reports</h2>
+    <div id="summary" class="grid-container">Loading reports...</div>
+  </div>
 
-const JSON_URL = "https://script.google.com/macros/s/AKfycbxnJq25K2hnLCqjSDes5MRqMbx3L3hz4XaYeSmeJqESjI8TTZay2tciBIlKkwyKbVdY/exec"; // <-- ilagay dito Apps Script Web App URL
+  <div id="reportModal" class="modal">
+    <div class="modal-content">
+      <button class="close-btn" id="closeModal">Close</button>
+      <div id="modalDetails"></div>
+    </div>
+  </div>
 
-let reports = [];
+  <script>
+    const summaryDiv = document.getElementById('summary');
+    const modal = document.getElementById('reportModal');
+    const modalDetails = document.getElementById('modalDetails');
+    const closeModalBtn = document.getElementById('closeModal');
 
-// Fetch reports from Google Sheets via Apps Script
-async function loadReports() {
-  try {
-    const res = await fetch(JSON_URL);
-    reports = await res.json();
+    const JSON_URL = "https://script.google.com/macros/s/AKfycbzcaarGQM3riZ5RVnsVBhzHytK9PSCaJwUe2C0YnThymvw_9SJcFNI7HN2k7yLIi9fJ/exec"; // <-- Palitan ng Web App URL
 
-    if(reports.length === 0){
-      summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
-      return;
+    async function loadReports() {
+      try {
+        const res = await fetch(JSON_URL);
+        const reports = await res.json();
+
+        if(reports.length === 0){
+          summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
+          return;
+        }
+
+        summaryDiv.innerHTML = "";
+        reports.forEach((data, idx) => {
+          const card = document.createElement('div');
+          card.className = 'report-card';
+          card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
+                            <div class="report-summary">${data.What || 'No description'}</div>`;
+
+          // Click to show all info
+          card.addEventListener('click', () => {
+            let html = `<h3>Report #${idx+1}</h3><ul>`;
+            for(const key in data){
+              if(key.toLowerCase().includes("photo") && data[key]){
+                html += `<li><strong>${key}:</strong><br><img src="${data[key]}" alt="Lost Item"></li>`;
+              } else {
+                html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
+              }
+            }
+            html += "</ul>";
+            modalDetails.innerHTML = html;
+            modal.style.display = 'flex';
+          });
+
+          summaryDiv.appendChild(card);
+        });
+
+      } catch(err) {
+        console.error("Error loading reports:", err);
+        summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
+      }
     }
 
-    summaryDiv.innerHTML = "";
-    reports.forEach((data, idx) => {
-      const card = document.createElement('div');
-      card.className = 'report-card';
+    closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
+    window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
 
-      // Kunin ang image URL at gawing <img> tag
-      let imgHTML = '';
-      if(data["Photo URL"]){
-        imgHTML = `<img src="${data["Photo URL"]}" alt="Lost Item" style="max-width:100%; border:2px solid #13007d; border-radius:8px;">`;
-      }
-
-      card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
-                        <div class="report-summary">${data.What || 'No description'}</div>
-                        ${imgHTML}`;
-
-      card.addEventListener('click', () => {
-        // Modal details
-        let html = `<h3>Report #${idx+1}</h3><ul>`;
-        for(const key in data){
-          if(key === "Photo URL" && data[key]){
-            html += `<li><strong>Photo:</strong><br><img src="${data[key]}" style="max-width:100%;"></li>`;
-          } else {
-            html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
-          }
-        }
-        html += "</ul>";
-        modalDetails.innerHTML = html;
-        modal.style.display = 'flex';
-      });
-
-      summaryDiv.appendChild(card);
-    });
-
-  } catch(err) {
-    console.error("Error loading reports:", err);
-    summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
-  }
-}
-
-// Close modal
-closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
-window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
-
-// Submit another report
-submitAnother.addEventListener('click', () => window.location.href = 'index.html');
-
-// Load reports on page load
-loadReports();
-</script>
+    loadReports();
+  </script>
 
 </body>
 </html>
-
-
