--- a/lostreport.html
+++ b/lostreport.html
@@ -1,231 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Lost Reports - Bravehearts Lost & Found</title>
+  <link rel="stylesheet" href="lostreport.css">
   <style>
-    /* Body */
     body {
       font-family: Arial, sans-serif;
+      background: #f2f2f2;
       margin: 0;
       padding: 0;
-      background: #f2f2f2;
     }
-
-    /* Video background */
     .video-background {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-      overflow: hidden;
+      top:0; left:0; width:100%; height:100%; z-index:-2; overflow:hidden;
     }
     .video-background video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      width:100%; height:100%; object-fit:cover;
     }
     .overlay {
-      position: fixed;
-      top:0; left:0;
-      width:100%; height:100%;
+      position: fixed; top:0; left:0; width:100%; height:100%;
       background: rgba(0,0,0,0.3);
       z-index:-1;
     }
-
-    /* Card container */
     .card {
-      max-width: 1200px;
-      margin: 50px auto;
-      background: rgba(255,255,255,0.85);
-      padding: 25px 30px;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-      position: relative;
-      z-index: 1;
-      color: #13007d;
+      max-width:900px;
+      margin:50px auto;
+      padding:20px;
+      border-radius:12px;
+      box-shadow:0 4px 15px rgba(0,0,0,0.2);
+      background:white;
     }
-
-    h2 {
-      text-align: center;
-      margin: 0;
-      margin-bottom: 20px;
-    }
-
-    /* Grid for reports */
+    h2 { text-align:center; color:#13007d; }
     .grid-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 16px;
+      display:grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap:15px;
+      margin-top:20px;
     }
-
-    /* Report card */
     .report-card {
-      border: 2px solid rgba(19,0,125,0.6);
-      border-radius: 12px;
-      padding: 14px 18px;
-      background: rgba(255,255,255,0.6);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-      transition: 0.3s;
-      cursor: pointer;
+      background:#f9f9f9;
+      border:1px solid #ccc;
+      border-radius:8px;
+      padding:10px;
+      transition:0.2s;
     }
-    .report-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+    .report-card:hover { box-shadow:0 0 10px rgba(0,0,0,0.2); }
+    .report-title { font-weight:bold; color:#13007d; margin-bottom:5px; }
+    .report-summary { font-size:14px; margin-bottom:5px; }
+    .view-btn {
+      margin-top:5px;
+      padding:6px 12px;
+      border:none;
+      border-radius:6px;
+      background:#13007d;
+      color:white;
+      text-decoration:none;
+      display:inline-block;
     }
-
-    .report-title {
-      font-weight: bold;
-      font-size: 1.1rem;
-      margin-bottom: 6px;
+    .view-btn:hover { background:#0d0060; }
+    #submitAnother {
+      margin-top:20px;
+      padding:12px 20px;
+      border:none;
+      border-radius:8px;
+      background:#13007d;
+      color:white;
+      font-weight:bold;
+      cursor:pointer;
     }
-    .report-summary {
-      font-size: 0.95rem;
-      color: #222;
-      max-height: 40px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: #fff;
-      padding: 25px 30px;
-      border-radius: 12px;
-      max-width: 700px;
-      width: 90%;
-      max-height: 90%;
-      overflow-y: auto;
-      position: relative;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-    }
-    .modal-content h3 {
-      margin-top: 0;
-      margin-bottom: 12px;
-      font-size: 1.4rem;
-      color: #13007d;
-      border-bottom: 1px solid #13007d;
-      padding-bottom: 6px;
-    }
-    .modal-content ul {
-      list-style: none;
-      padding: 0;
-    }
-    .modal-content ul li {
-      margin-bottom: 10px;
-    }
-    .modal-content img {
-      max-width: 100%;
-      border: 2px solid #13007d;
-      border-radius: 8px;
-      margin-top: 8px;
-    }
-    .close-btn {
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      padding: 8px 16px;
-      border-radius: 8px;
-      background: #13007d;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.2s;
-    }
-    .close-btn:hover {
-      background: #0d0060;
-      transform: scale(1.05);
-    }
+    #submitAnother:hover { background:#0d0060; }
   </style>
 </head>
 <body>
 
-  <div class="video-background">
-    <video autoplay muted loop playsinline>
-      <source src="video/FAITH.mp4" type="video/mp4">
-    </video>
-  </div>
-  <div class="overlay"></div>
+<div class="video-background">
+  <video autoplay muted loop playsinline>
+    <source src="video/FAITH.mp4" type="video/mp4">
+  </video>
+</div>
+<div class="overlay"></div>
 
-  <div class="card">
-    <h2>All Submitted Lost Reports</h2>
-    <div id="summary" class="grid-container">Loading reports...</div>
-  </div>
+<div class="card">
+  <h2>All Submitted Lost Reports</h2>
+  <div id="summary" class="grid-container">Loading reports...</div>
+  <button id="submitAnother">Submit Another Report</button>
+</div>
 
-  <div id="reportModal" class="modal">
-    <div class="modal-content">
-      <button class="close-btn" id="closeModal">Close</button>
-      <div id="modalDetails"></div>
-    </div>
-  </div>
+<script>
+const summaryDiv = document.getElementById('summary');
+const submitAnother = document.getElementById('submitAnother');
 
-  <script>
-    const summaryDiv = document.getElementById('summary');
-    const modal = document.getElementById('reportModal');
-    const modalDetails = document.getElementById('modalDetails');
-    const closeModalBtn = document.getElementById('closeModal');
+// Google Apps Script Web App URL
+const JSON_URL = "https://script.google.com/macros/s/AKfycbzcaarGQM3riZ5RVnsVBhzHytK9PSCaJwUe2C0YnThymvw_9SJcFNI7HN2k7yLIi9fJ/exec"; // <-- palitan ng URL mo
 
-    const JSON_URL = "https://script.google.com/macros/s/AKfycbzcaarGQM3riZ5RVnsVBhzHytK9PSCaJwUe2C0YnThymvw_9SJcFNI7HN2k7yLIi9fJ/exec"; // <-- Palitan ng Web App URL
+async function loadReports() {
+  try {
+    const res = await fetch(JSON_URL);
+    const reports = await res.json();
 
-    async function loadReports() {
-      try {
-        const res = await fetch(JSON_URL);
-        const reports = await res.json();
-
-        if(reports.length === 0){
-          summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
-          return;
-        }
-
-        summaryDiv.innerHTML = "";
-        reports.forEach((data, idx) => {
-          const card = document.createElement('div');
-          card.className = 'report-card';
-          card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
-                            <div class="report-summary">${data.What || 'No description'}</div>`;
-
-          // Click to show all info
-          card.addEventListener('click', () => {
-            let html = `<h3>Report #${idx+1}</h3><ul>`;
-            for(const key in data){
-              if(key.toLowerCase().includes("photo") && data[key]){
-                html += `<li><strong>${key}:</strong><br><img src="${data[key]}" alt="Lost Item"></li>`;
-              } else {
-                html += `<li><strong>${key}:</strong> ${data[key]}</li>`;
-              }
-            }
-            html += "</ul>";
-            modalDetails.innerHTML = html;
-            modal.style.display = 'flex';
-          });
-
-          summaryDiv.appendChild(card);
-        });
-
-      } catch(err) {
-        console.error("Error loading reports:", err);
-        summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
-      }
+    if(reports.length === 0){
+      summaryDiv.innerHTML = "<p>No reports submitted yet.</p>";
+      return;
     }
 
-    closeModalBtn.addEventListener('click', () => modal.style.display = 'none');
-    window.addEventListener('click', e => { if(e.target === modal) modal.style.display = 'none'; });
+    summaryDiv.innerHTML = "";
+    reports.forEach((data, idx) => {
+      const card = document.createElement('div');
+      card.className = 'report-card';
 
-    loadReports();
-  </script>
+      // Kunin ang image kung meron
+      let photoHTML = '';
+      if(data["Photo URL"]){
+        photoHTML = `<img src="${data["Photo URL"]}" alt="Lost Item" style="max-width:100%; border:2px solid #13007d; border-radius:8px; margin-top:5px;">
+                     <br><a href="${data["Photo URL"]}" target="_blank" class="view-btn">View Full Image</a>`;
+      }
+
+      // Ipakita lahat ng info mula sa Sheet
+      let infoHTML = '';
+      for(const key in data){
+        if(key !== "Photo URL"){
+          infoHTML += `<div class="report-summary"><strong>${key}:</strong> ${data[key]}</div>`;
+        }
+      }
+
+      card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
+                        ${infoHTML}
+                        ${photoHTML}`;
+
+      summaryDiv.appendChild(card);
+    });
+
+  } catch(err) {
+    console.error("Error loading reports:", err);
+    summaryDiv.innerHTML = "<p>Error loading reports. Try again later.</p>";
+  }
+}
+
+// Button to submit another report
+submitAnother.addEventListener('click', () => window.location.href = 'index.html');
+
+loadReports();
+</script>
 
 </body>
 </html>
