--- a/lostreport.html
+++ b/lostreport.html
@@ -69,6 +69,19 @@
       cursor:pointer;
     }
     #submitAnother:hover { background:#0d0060; }
+    #submitAnother {
+  margin-top:20px;
+  padding:12px 20px;
+  border:none;
+  border-radius:8px;
+  background:#13007d;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+  position: relative;
+  z-index: 2; /* siguradong above overlay/video */
+}
+#submitAnother:hover { background:#0d0060; }
   </style>
 </head>
 <body>
@@ -144,3 +157,4 @@ loadReports();
 
 </body>
 </html>
+
