--- a/lostreport.html
+++ b/lostreport.html
@@ -29,8 +29,6 @@
       border-radius:12px;
       box-shadow:0 4px 15px rgba(0,0,0,0.2);
       background:white;
-      position: relative;
-      z-index:1;
     }
     h2 { text-align:center; color:#13007d; }
     .grid-container {
@@ -49,44 +47,7 @@
     }
     .report-card:hover { box-shadow:0 0 10px rgba(0,0,0,0.2); }
     .report-title { font-weight:bold; color:#13007d; margin-bottom:5px; }
-    .report-summary { font-size:14px; margin-bottom:5px; }
-
-    /* Modal */
-    .modal {
-      display:none;
-      position:fixed;
-      top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,0.6);
-      justify-content:center;
-      align-items:center;
-      z-index:10;
-    }
-    .modal-content {
-      background:white;
-      padding:20px;
-      border-radius:12px;
-      max-width:600px;
-      max-height:80%;
-      overflow-y:auto;
-      position:relative;
-    }
-    .close-btn {
-      position:absolute;
-      top:10px; right:10px;
-      padding:6px 12px;
-      border:none;
-      border-radius:6px;
-      background:#13007d;
-      color:white;
-      cursor:pointer;
-    }
-    .modal img {
-      max-width:100%;
-      margin-top:10px;
-      border:2px solid #13007d;
-      border-radius:8px;
-    }
+    .report-summary { font-size:14px; margin-bottom:3px; }
     #submitAnother {
       margin-top:20px;
       padding:12px 20px;
@@ -96,10 +57,11 @@
       color:white;
       font-weight:bold;
       cursor:pointer;
-      position: relative;
-      z-index:2;
     }
-    #submitAnother:hover { background:#0d0060; }
+    .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
+    .modal-content { background:white; padding:20px; border-radius:12px; max-width:600px; max-height:80%; overflow-y:auto; position:relative; }
+    .close-btn { position:absolute; top:10px; right:10px; padding:6px 12px; border:none; border-radius:6px; background:#13007d; color:white; cursor:pointer; }
+    .modal img { max-width:100%; margin-top:10px; border:2px solid #13007d; border-radius:8px; }
   </style>
 </head>
 <body>
@@ -117,7 +79,6 @@
   <button id="submitAnother">Submit Another Report</button>
 </div>
 
-<!-- Modal -->
 <div id="reportModal" class="modal">
   <div class="modal-content">
     <button class="close-btn" id="closeModal">Close</button>
@@ -132,6 +93,7 @@ const modalDetails = document.getElementById('modalDetails');
 const closeModalBtn = document.getElementById('closeModal');
 const submitAnother = document.getElementById('submitAnother');
 
+// Google Apps Script Web App URL
 const JSON_URL = "https://script.google.com/macros/s/AKfycbzcaarGQM3riZ5RVnsVBhzHytK9PSCaJwUe2C0YnThymvw_9SJcFNI7HN2k7yLIi9fJ/exec";
 
 async function loadReports() {
@@ -149,23 +111,29 @@ async function loadReports() {
       const card = document.createElement('div');
       card.className = 'report-card';
 
-      // Show Report #, Email, What directly in grid
-      const emailVal = data.Email && data.Email.trim() !== "" ? data.Email : "-";
-      const whatVal = data.What && data.What.trim() !== "" ? data.What : "-";
+      // Normalize keys
+      const normalizedData = {};
+      for(const key in data){
+        normalizedData[key.trim()] = data[key];
+      }
 
+      const emailVal = normalizedData['Email'] || "-";
+      const whatVal = normalizedData['What'] || "-";
+
+      // Show Email and What immediately
       card.innerHTML = `<div class="report-title">Report #${idx+1}</div>
                         <div class="report-summary"><strong>Email:</strong> ${emailVal}</div>
                         <div class="report-summary"><strong>What:</strong> ${whatVal}</div>`;
 
-      // Click to show full info in modal
+      // Show full info in modal when clicked
       card.addEventListener('click', () => {
         let html = `<h3>Report #${idx+1}</h3>`;
-        for(const key in data){
-          if(data[key]){
+        for(const key in normalizedData){
+          if(normalizedData[key]){
             if(key === "Photo URL"){
-              html += `<div><strong>${key}:</strong><br><img src="${data[key]}" alt="Lost Item"></div>`;
+              html += `<div><strong>${key}:</strong><br><img src="${normalizedData[key]}" alt="Lost Item"></div>`;
             } else {
-              html += `<div><strong>${key}:</strong> ${data[key]}</div>`;
+              html += `<div><strong>${key}:</strong> ${normalizedData[key]}</div>`;
             }
           }
         }
