--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<div class="video-background">
+  <div class="video-background">
     <video autoplay muted loop playsinline>
       <source src="video/FAITH.mp4" type="video/mp4">
     </video>
   </div>
   <div class="overlay"></div>
 
-
   <h1>BRAVEHEARTS LOST & FOUND</h1>
+  
   <div class="locker-box">
-   <a href="lost.html"><button>LOST</button></a>
-   <a href="found.html"><button>FOUND</button></a>
-   <a href="claim.html"><button>CLAIM</button></a>
+    <a href="lost.html"><button>LOST</button></a>
+    <a href="found.html"><button>FOUND</button></a>
+    <a href="claim.html"><button>CLAIM</button></a>
+  </div>
+
+  <!-- Small button for viewing all lost reports -->
+  <div class="view-reports">
+    <a href="lostreport.html"><button class="small-btn">View All Reports (LOST)</button></a>
   </div>
 </body>
 </html>
