--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <a href="found.html"><button>FOUND</button></a>
     <a href="claim.html"><button>CLAIM</button></a>
   </div>
+<!-- Small buttons container -->
+<div class="view-reports-container">
+  <a href="lostreport.html"><button class="small-btn">View All Reports (LOST)</button></a>
+ 
+  <a href="foundreport.html"><button class="small-btn">View All Reports (FOUND)</button></a>
+</div>
 
-  <!-- Small button for viewing all lost reports -->
-  <div class="view-reports">
-    <a href="lostreport.html"><button class="small-btn">View All Reports (LOST)</button></a>
-  </div>
 </body>
 </html>
