--- a/lost.html
+++ b/lost.html
@@ -7,7 +7,7 @@
     body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
     .video-background { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; overflow:hidden; }
     .video-background video { width:100%; height:100%; object-fit:cover; }
-    .card { background:white; max-width:600px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
+    .card { background: rgba(255, 255, 255, 0.364); max-width:600px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
     h2 { text-align:center; color:#13007d; }
     label { display:block; margin-top:12px; font-weight:bold; }
     input, textarea { width:100%; padding:8px; margin-top:4px; border-radius:6px; border:1px solid #ccc; }
@@ -154,6 +154,7 @@ viewReports.addEventListener('click', () => window.location.href = 'lostreport.h
 
 </body>
 </html>
+
 
 
 
