--- a/lost.html
+++ b/lost.html
@@ -13,7 +13,9 @@
 </div>
 
 <div class="card">
-  <button id="backBtn">&larr; Back</button>
+ <!-- Back button at the top -->
+    <button id="backBtn" style="margin-bottom:15px; padding:8px 16px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">&larr; Back</button>
+
   <h2>Lost Item Report</h2>
   <p class="note">Fill in the fields and take a picture of the item.</p>
 
@@ -138,6 +140,7 @@ viewReports.addEventListener('click', () => window.location.href = 'lostreport.h
 
 </body>
 </html>
+
 
 
 
