--- a/lost.html
+++ b/lost.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="lost.css">
 </head>
 <body>
+<body>
 
 <div class="video-background">
   <video autoplay muted loop playsinline>
@@ -13,9 +14,7 @@
 </div>
 
 <div class="card">
- <!-- Back button at the top -->
-    <button id="backBtn" style="margin-bottom:15px; padding:8px 16px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">&larr; Back</button>
-
+  <button id="backBtn">&larr; Back</button>
   <h2>Lost Item Report</h2>
   <p class="note">Fill in the fields and take a picture of the item.</p>
 
@@ -62,13 +61,13 @@
     <button type="submit">Send Report</button>
   </form>
 
+  <div id="summary" style="display:none;"></div>
 
-   <!-- Summary + action buttons -->
-    <div id="summary" style="display:none; margin-top:20px; text-align:left;"></div>
-    <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
-      <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">Submit Another Report</button>
-      <button id="goToLostReport" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">View All Reports</button>
-    </div>
+  <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
+    <button id="submitAgain" style="display:none;">Submit Another Report</button>
+    <button id="viewReports" style="display:none;">View All Reports</button>
+  </div>
+</div>
 
 <script>
 const form = document.getElementById('lostForm');
