--- a/lost.html
+++ b/lost.html
@@ -64,8 +64,8 @@
   <div id="summary" style="display:none;"></div>
 
   <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
-    <button id="submitAgain" style="display:none;">Submit Another Report</button>
-    <button id="viewReports" style="display:none;">View All Reports</button>
+   <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">Submit Another Report</button>
+    <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">View All Reports</button>
   </div>
 </div>
 
@@ -139,6 +139,7 @@ viewReports.addEventListener('click', () => window.location.href = 'lostreport.h
 
 </body>
 </html>
+
 
 
 
