--- a/lost.html
+++ b/lost.html
@@ -61,13 +61,12 @@
     <button type="submit">Send Report</button>
   </form>
 
-  <div id="summary" style="display:none;"></div>
-
-  <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
-   <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">Submit Another Report</button>
-    <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">View All Reports</button>
+      <div id="summary" style="display:none; margin-top:20px; text-align:left;"></div>
+    <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
+      <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">Submit Another Report</button>
+      <button id="goToLostReport" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">View All Reports</button>
+    </div>
   </div>
-</div>
 
 <script>
 const form = document.getElementById('lostForm');
@@ -139,6 +138,7 @@ viewReports.addEventListener('click', () => window.location.href = 'lostreport.h
 
 </body>
 </html>
+
 
 
 
