--- a/found.html
+++ b/found.html
@@ -19,7 +19,8 @@
     This page will later include a list or gallery of items that can be claimed by their rightful owners.</p>
 
 
-    <a href="prototype.html"><button>⬅ Back to Home</button></a>
+    <a href="prototype.html"><button>back to Home</button></a>
   </div>
 </body>
 </html>
+
